syntax = "proto3";
package hotstuff.types;

option go_package = "github.com/xufeisofly/hotstuff/proto/hotstuff/types";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "hotstuff/types/types.proto";
import "hotstuff/types/block.proto";

message HsProposal {
    int64 epoch_view = 1;
    hotstuff.types.Block block = 2;
    hotstuff.types.TimeoutCert timeout_cert = 3;
    google.protobuf.Timestamp time = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
    bytes signature = 5;
}
